--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -9,7 +10,7 @@
 }
 *{
   background-color: black;
- 
+  font-family: 'Lato', sans-serif !important;
 }
 @media (prefers-color-scheme: dark) {
   :root {
