some of the service page

--- a/app/Services/Services.scss
+++ b/app/Services/Services.scss
@@ -22,7 +22,15 @@
   #section1{
     background-color: transparent;
   }
-
+#section1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#web-development-SEO-management-services-P{
+    color: white;
+    padding: 10px;
+}
 
   @media screen and (max-width: 1506px) {
 
