--- a/components/SlideIn/SlideIn.scss
+++ b/components/SlideIn/SlideIn.scss
@@ -27,7 +27,7 @@
 .slide-in {
     
     animation: slideInAnimation 0.5s ease-in forwards;
-    transform: translateX(1000%);
+    transform: translateX(-800%);
   }
   
   // @keyframes slideInAnimation {
@@ -40,7 +40,7 @@
   // }
   .slide-in2 {
     animation: slideInAnimation 0.5s ease-in forwards;
-    transform: translateX(700%);
+    transform: translateX(800%);
     animation-delay: .5s;
   }
   
@@ -54,8 +54,17 @@
   // }
   .slide-in3 {
     animation: slideInAnimation 0.5s ease-in forwards;
-    transform: translateX(200%);
+    transform: translateX(800%);
     animation-delay: .85s;
+  }
+
+  .slide-in {
+    left: -100%;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .visible {
+    transform: translateX(0);
   }
   
   @keyframes slideInAnimation {
