--- a/app/Services/Services.scss
+++ b/app/Services/Services.scss
@@ -31,6 +31,13 @@
     color: white;
     padding: 10px;
 }
+#Contactform{
+  padding: 0 !important;
+  margin: 0 !important;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+}
 
   @media screen and (max-width: 1506px) {
 
