--- a/app/home.scss
+++ b/app/home.scss
@@ -5,6 +5,8 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
     text-align: center;
     text-shadow: black 0px 0px 15px;
 }
