--- a/app/home.scss
+++ b/app/home.scss
@@ -18,7 +18,7 @@
 #web-development-SEO-management{
     padding-top: 150px;
     color: white;
-    font-size: 5vw;
+    font-size: 2em;
     text-align: center;
     padding-left: 15px;
     padding-right: 15px;
