--- a/app/home.scss
+++ b/app/home.scss
@@ -18,7 +18,7 @@
 #web-development-SEO-management{
     padding-top: 150px;
     color: white;
-    font-size: 2em;
+    font-size: 5vw;
     text-align: center;
     padding-left: 15px;
     padding-right: 15px;
@@ -135,7 +135,7 @@
 }
 @media screen and (max-width: 982px) {
     #web-development-SEO-management{
-        
+      font-size: 2em;
         font-weight: bold;
       }
     #web-development-SEO-management-h2{
