--- a/components/Footer.scss
+++ b/components/Footer.scss
@@ -1,6 +1,22 @@
 #footer-h2{
     color: white;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+.leaflet-pane{
+    background-color: transparent !important;
+  }
+  #PagesFooter{
+    color: white;
+    padding: 15px;
+    font-weight: bold;
+    letter-spacing: 1.3px;
+  }
+  #logoFooter{
+    background-color: white;
+  }
+  #PagesFooterImg{
+    padding: 8px;
+  }
