--- a/app/Our-Work/OurWork.scss
+++ b/app/Our-Work/OurWork.scss
@@ -18,6 +18,7 @@
   }
 #client-img{
   padding-top: 75px;
+  padding-bottom: 15px;
 }
 #thisPageLink:hover{
   font-size: 22px; 
@@ -30,6 +31,9 @@
   padding: 4px 8px 4px 8px;
   border-radius: 10px;
   font-weight: bolder;
+}
+#client-link{
+  padding-top: 10px;
 }
   @media screen and (max-width: 1506px) {
 
