--- a/app/home.scss
+++ b/app/home.scss
@@ -119,7 +119,7 @@
     justify-content: center;
 }
 #cardIcon{
-    color: white;
+    color: #7DF9FF;
     font-size: 100px;
 }
 #cardTitle{
@@ -135,7 +135,7 @@
 }
 @media screen and (max-width: 982px) {
     #web-development-SEO-management{
-      font-size: 2em;
+      font-size: 20px;
         font-weight: bold;
       }
     #web-development-SEO-management-h2{
