service page updated

--- a/app/Services/Services.scss
+++ b/app/Services/Services.scss
@@ -30,6 +30,7 @@
 #web-development-SEO-management-services-P{
     color: white;
     padding: 10px;
+    text-align: justify;
 }
 #Contactform{
   padding: 0 !important;
@@ -38,7 +39,30 @@
   display: flex;
   justify-content: center;
 }
-
+#web-development-SEO-management-ourServices-img1{
+  display: block;
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-background-position: center;
+  background-position: center;
+  width: 200em;
+  padding-top: 25px;
+  padding-left: 20px;
+  padding-bottom: 25px;
+}
+#web-development-SEO-management-ourServices-img2{
+  display: block;
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-background-position: center;
+  background-position: center;
+  width: 90em;
+  padding-top: 25px;
+  padding-left: 20px;
+  padding-bottom: 25px;
+}
   @media screen and (max-width: 1506px) {
 
     
