--- a/components/SlideInHelp/SlideInHelp.scss
+++ b/components/SlideInHelp/SlideInHelp.scss
@@ -1,4 +1,4 @@
-#slide-in-section{
+#slide-in-help-section{
     background-color: black;
     width: 250px;
     height: 85px;
@@ -8,7 +8,7 @@
     align-items: center;
     border-radius: 10px;
 }
-#slide-in-p{
+#slide-in-help-p{
   background-color: black;
   color: #7DF9FF;
   border-radius: 10px;
