--- a/app/About/About.scss
+++ b/app/About/About.scss
@@ -43,7 +43,7 @@
     text-align: center;
   }
   #web-development-SEO-management-AboutUs-h2{
-    color: white;
+    color: #7DF9FF;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
